Log delta count in addition to throughput in LoggingMeterRegistry
Closes #5548