@@ -15,15 +15,22 @@
  */
 package io.micrometer.core.instrument.logging;
 
+import com.google.common.util.concurrent.AtomicDouble;
 import io.micrometer.core.instrument.*;
 import io.micrometer.core.instrument.binder.BaseUnits;
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
+import java.util.stream.IntStream;
 
+import static java.util.Collections.emptyList;
+import static java.util.concurrent.TimeUnit.SECONDS;
 import static org.assertj.core.api.Assertions.assertThat;
 
 /**
@@ -32,10 +39,19 @@ import static org.assertj.core.api.Assertions.assertThat;
  * @author Jon Schneider
  * @author Johnny Lim
  * @author Matthieu Borgraeve
+ * @author Francois Staudt
  */
 class LoggingMeterRegistryTest {
 
     private final LoggingMeterRegistry registry = new LoggingMeterRegistry();
+
+    private final ConfigurableLoggingRegistryConfig config = new ConfigurableLoggingRegistryConfig();
+
+    private final MockClock clock = new MockClock();
+
+    private final List<String> logs = new ArrayList<>();
+
+    private final LoggingMeterRegistry spyLogRegistry = new LoggingMeterRegistry(config, clock, logs::add);
 
     @Test
     void defaultMeterIdPrinter() {
@@ -110,22 +126,24 @@ class LoggingMeterRegistryTest {
 
     @Test
     void writeMeterUnitlessValue() {
-        final String expectedResult = "meter.1{} value=0";
+        final String expectedResult = "meter.1{} value=0, delta_count=30, throughput=0.5/s";
 
         Measurement m1 = new Measurement(() -> 0d, Statistic.VALUE);
-        Meter meter = Meter.builder("meter.1", Meter.Type.OTHER, Collections.singletonList(m1)).register(registry);
+        Measurement m2 = new Measurement(() -> 30d, Statistic.COUNT);
+        Meter meter = Meter.builder("meter.1", Meter.Type.OTHER, List.of(m1, m2)).register(registry);
         LoggingMeterRegistry.Printer printer = registry.new Printer(meter);
         assertThat(registry.writeMeter(meter, printer)).isEqualTo(expectedResult);
     }
 
     @Test
     void writeMeterMultipleValues() {
-        final String expectedResult = "sheepWatch{color=black} value=5 sheep, max=1023 sheep, total=1.1s";
+        final String expectedResult = "sheepWatch{color=black} value=5 sheep, max=1023 sheep, total=1.1s, delta_count=30 sheep, throughput=0.5 sheep/s";
 
         Measurement m1 = new Measurement(() -> 5d, Statistic.VALUE);
         Measurement m2 = new Measurement(() -> 1023d, Statistic.MAX);
         Measurement m3 = new Measurement(() -> 1100d, Statistic.TOTAL_TIME);
-        Meter meter = Meter.builder("sheepWatch", Meter.Type.OTHER, Arrays.asList(m1, m2, m3))
+        Measurement m4 = new Measurement(() -> 30d, Statistic.COUNT);
+        Meter meter = Meter.builder("sheepWatch", Meter.Type.OTHER, List.of(m1, m2, m3, m4))
             .tag("color", "black")
             .description("Meter for shepherds.")
             .baseUnit("sheep")
@@ -136,7 +154,7 @@ class LoggingMeterRegistryTest {
 
     @Test
     void writeMeterByteValues() {
-        final String expectedResult = "bus-throughput{} throughput=5 B/s, value=64 B, value=2.125 KiB, value=8 MiB, value=1 GiB";
+        final String expectedResult = "bus-throughput{} delta_count=300 B, throughput=5 B/s, value=64 B, value=2.125 KiB, value=8 MiB, value=1 GiB";
 
         Measurement m1 = new Measurement(() -> 300d, Statistic.COUNT);
         Measurement m2 = new Measurement(() -> (double) (1 << 6), Statistic.VALUE);
@@ -164,6 +182,105 @@ class LoggingMeterRegistryTest {
         Gauge gauge = registry.find("my.gauge").gauge();
         LoggingMeterRegistry.Printer printer = registry.new Printer(gauge);
         assertThat(printer.value(Double.POSITIVE_INFINITY)).isEqualTo("∞");
+    }
+
+    @Test
+    void publish_ShouldPrintDeltaCountAndThroughput_WhenMeterIsCounter() {
+        var counter = spyLogRegistry.counter("my.counter");
+        counter.increment(30);
+        clock.add(config.step());
+        spyLogRegistry.publish();
+        assertThat(logs).containsExactly("Step: 60s", "my.counter{} delta_count=30 throughput=0.5/s");
+    }
+
+    @Test
+    void publish_ShouldPrintDeltaCountAndThroughput_WhenMeterIsTimer() {
+        var timer = spyLogRegistry.timer("my.timer");
+        IntStream.rangeClosed(1, 30).forEach(t -> timer.record(1, SECONDS));
+        clock.add(config.step());
+        spyLogRegistry.publish();
+        assertThat(logs).containsExactly("Step: 60s", "my.timer{} delta_count=30 throughput=0.5/s mean=1s max=1s");
+    }
+
+    @Test
+    void publish_ShouldPrintDeltaCountAndThroughput_WhenMeterIsSummary() {
+        var summary = spyLogRegistry.summary("my.summary");
+        IntStream.rangeClosed(1, 30).forEach(t -> summary.record(1));
+        clock.add(config.step());
+        spyLogRegistry.publish();
+        assertThat(logs).containsExactly("Step: 60s", "my.summary{} delta_count=30 throughput=0.5/s mean=1 max=1");
+    }
+
+    @Test
+    void publish_ShouldPrintDeltaCountAndThroughput_WhenMeterIsFunctionCounter() {
+        spyLogRegistry.more().counter("my.function-counter", emptyList(), new AtomicDouble(), d -> 30);
+        clock.add(config.step());
+        spyLogRegistry.publish();
+        assertThat(logs).containsExactly("Step: 60s", "my.function-counter{} delta_count=30 throughput=0.5/s");
+    }
+
+    @Test
+    void publish_ShouldPrintDeltaCountAndThroughput_WhenMeterIsFunctionTimer() {
+        spyLogRegistry.more().timer("my.function-timer", emptyList(), new AtomicDouble(), d -> 30, d -> 30, SECONDS);
+        clock.add(config.step());
+        spyLogRegistry.publish();
+        assertThat(logs).containsExactly("Step: 60s", "my.function-timer{} delta_count=30 throughput=0.5/s mean=1s");
+    }
+
+    @Test
+    void publish_ShouldNotPrintAnything_WhenRegistryIsDisabled() {
+        config.set("enabled", "false");
+        spyLogRegistry.counter("my.counter").increment();
+        clock.add(config.step());
+        spyLogRegistry.publish();
+        assertThat(spyLogRegistry.getMeters()).hasSize(1);
+        assertThat(logs).isEmpty();
+    }
+
+    @Test
+    void publish_ShouldOnlyPrintStepDuration_WhenStepCountIsZeroAndLogsInactiveIsDisabled() {
+        spyLogRegistry.counter("my.counter");
+        spyLogRegistry.timer("my.timer");
+        spyLogRegistry.summary("my.summary");
+        spyLogRegistry.more().counter("my.function-counter", emptyList(), new AtomicDouble(), d -> 0);
+        spyLogRegistry.more().timer("my.function-timer", emptyList(), new AtomicDouble(), d -> 0, d -> 0, SECONDS);
+        clock.add(config.step());
+        spyLogRegistry.publish();
+        assertThat(spyLogRegistry.getMeters()).hasSize(5);
+        assertThat(logs).containsExactly("Step: 60s");
+    }
+
+    @Test
+    void publish_ShouldPrintMetersWithZeroStepCount_WhenLogsInactiveIsEnabled() {
+        config.set("logInactive", "true");
+        spyLogRegistry.counter("my.counter");
+        spyLogRegistry.timer("my.timer");
+        spyLogRegistry.summary("my.summary");
+        spyLogRegistry.more().counter("my.function-counter", emptyList(), new AtomicDouble(), d -> 0);
+        spyLogRegistry.more().timer("my.function-timer", emptyList(), new AtomicDouble(), d -> 0, d -> 0, SECONDS);
+        clock.add(config.step());
+        spyLogRegistry.publish();
+        assertThat(spyLogRegistry.getMeters()).hasSize(5);
+        assertThat(logs).containsExactlyInAnyOrder("Step: 60s", "my.counter{} delta_count=0 throughput=0/s",
+                "my.timer{} delta_count=0 throughput=0/s mean= max=",
+                "my.summary{} delta_count=0 throughput=0/s mean=0 max=0",
+                "my.function-counter{} delta_count=0 throughput=0/s",
+                "my.function-timer{} delta_count=0 throughput=0/s mean=");
+    }
+
+    private static class ConfigurableLoggingRegistryConfig implements LoggingRegistryConfig {
+
+        private final Map<String, String> keys = new HashMap<>();
+
+        @Override
+        public String get(String key) {
+            return keys.get(key);
+        }
+
+        public void set(String key, String value) {
+            keys.put(prefix() + "." + key, value);
+        }
+
     }
 
 }
